# RootDetection

./: .gitignore  RootDetection.code-workspace  settings.gradle.kts
app/: build.gradle.kts
app/release/: app-release-0.2.0.aab
app/src/: google-services.json
app/src/androidTest/java/com/islab/rootbeer/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/islab/rootdetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/islab/rootbeer/: MainActivity.kt  RootDetectionApplication.kt
app/src/main/java/com/islab/rootbeer/detection/: RootCheckResult.kt  RootChecker.kt
app/src/main/java/com/islab/rootbeer/integrity/: ApiClient.kt  PlayIntegrityHelper.kt
app/src/main/java/com/islab/rootbeer/presentation/screen/: RootDetectionScreen.kt
app/src/main/java/com/islab/rootbeer/presentation/viewmodel/: RootSecurityViewModel.kt
app/src/main/java/com/islab/rootbeer/ui/theme/: Theme.kt
app/src/main/java/com/islab/rootdetection/: MainActivity.kt
app/src/main/java/com/islab/rootdetection/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  native-lib.c
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/islab/rootbeer/: ExampleUnitTest.kt
app/src/test/java/com/islab/rootdetection/: ExampleUnitTest.kt
backend/local-server/: package.json  tsconfig.json
backend/local-server/src/: index.ts  playIntegrityReal.ts  risk.ts  types.ts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
